manifests/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: 'keycloak.bababourbaki.dev'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/server-snippet: |2-
      location ~* "^/auth/realms/master/metrics" {
        return 301 /auth/realms/master;
      }
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak
spec:
    rules:
    - host: keycloak.bababourbaki.dev
      http:
        paths:
        - backend:
            service:
              name: keycloak
              port:
                number: 8443
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - keycloak.bababourbaki.dev
      secretName: keycloak-tls
